@@ -1,3 +1,12 @@
+2004-05-27  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/win32/WIN32ServerEvent.m (-windowEventProc:::) Added
+	handling of size and move events and extracted end of resize event
+	handling into the same new method. PAINT now always validates the
+	whole window.
+	Patch by MA Garcias <lists@tragnarion.com>.
+	New method [-resizeBackingStoreFor:] used for end of resize events.
+
 2004-05-13 17:11  Alexander Malmberg <alexander@malmberg.org>
 
 	* Source/art/ftfont.m (-advancementForGlyph:): Return a zero size for
